ajustando bug do z-index do cabecalho e menu lateral

--- a/codigo-fonte/paginaIncial/style/cabecalho.css
+++ b/codigo-fonte/paginaIncial/style/cabecalho.css
@@ -84,7 +84,7 @@
   width: 200px;
   color: var(--branco);
   background-color: var(--azul);
-  z-index: 0;
+  z-index: 3;
   transition: all 0.5s ease;
 }
 
